# AI-Research-Agent

./: .gitignore
AI Research Agent2/: .gitignore  Dockerfile
AI Research Agent2/configs/: logging.yaml
AI Research Agent2/docs/architecture/: overview.md
AI Research Agent2/src/ai_research_agent/agents/: base.py  memory_manager.py  reviewer.py  writer.py
AI Research Agent2/tests/graph/: test_workflow.py
AI Research Agent3/: .env.example  README.md  requirements.txt
AI Research Agent3/src/ai_research_agent/: __init__.py  app.py
AI Research Agent3/tests/agents/: test_researcher_agent.py  test_supervisor_agent.py
AI Research Agent4/: README.md
AI Research Agent4/docs/architecture/: agents.md  workflow.md
AI Research Agent4/tests/agents/: test_researcher_agent.py
AI_Research_Agent/: README.md  docker-compose.yml  pyproject.toml
AI_Research_Agent/configs/: settings.example.toml
AI_Research_Agent/docs/architecture/: agents.md  uml.md  workflow.md
AI_Research_Agent/src/ai_research_agent/agents/: __init__.py  base.py  planner.py  supervisor.py
AI_Research_Agent/src/ai_research_agent/agents/planner/: agent.py
AI_Research_Agent/src/ai_research_agent/agents/researcher/: __init__.py  state.py
AI_Research_Agent/src/ai_research_agent/agents/reviewer/: __init__.py
AI_Research_Agent/src/ai_research_agent/agents/supervisor/: state.py
AI_Research_Agent/src/ai_research_agent/agents/writer/: agent.py  prompt.py
AI_Research_Agent/src/ai_research_agent/api/routers/: __init__.py
AI_Research_Agent/src/ai_research_agent/core/: logging.py
AI_Research_Agent/src/ai_research_agent/graph/: __init__.py  state.py  workflow.py
AI_Research_Agent/src/ai_research_agent/infra/storage/: sqlite.py
AI_Research_Agent/src/ai_research_agent/schemas/: system.py
AI_Research_Agent/src/ai_research_agent/tools/: __init__.py
AI_Research_Agent/tests/: test_health.py
AI_Research_Agent/tests/agents/: test_planner_agent.py  test_reviewer_agent.py  test_writer_agent.py
AI_Research_Agent/tests/graph/: test_workflow.py
AI_Research_Agent/tests/tools/: test_registry.py
(+36 files in other folders)
