[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Industrial-grade multi-agent research assistant built with LangGraph, FastAPI, and OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
  "langgraph",
  "langchain",
  "multi-agent",
  "research",
  "fastapi",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langgraph>=0.2.0,<0.3.0",
  "langchain-openai>=0.2.0,<0.3.0",
  "chromadb>=0.5.0,<0.6.0",
  "httpx>=0.27.0,<0.28.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "structlog>=24.4.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pre-commit>=3.8.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/ai-research-agent"
Repository = "https://github.com/your-username/ai-research-agent"
Issues = "https://github.com/your-username/ai-research-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_agent"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ai_research_agent"]
